add style and animation
Co-authored-by: Brady Diamond <BradyDiamond@users.noreply.github.com>
Co-authored-by: DiamondsAndRust206 <DiamondsAndRust206@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       <div id="output">
   
       </div>
-      
+      <!-- <div id="buy">
+        <p>Thank you for your purchase!</p>
+      </div> -->
     </form>
 
   </div>
